@@ -1,1 +1,21 @@
-DIST quakespasm-0.85.7.tgz 2941295 RMD160 5091f051767a983a952a3c60f41df5a01393418f SHA1 520f8829486c5ad0e80a10e03414be4c2e30460d SHA256 35acd9c073e642f2f8067193bac2821188373202cd717b84442c07852afa7537
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST quakespasm-0.85.9.tgz 3866766 SHA256 e308e4f7748a197bac260b9c7a042e6d22f23131098b8c4e807cdd6097a11b11 SHA512 d124fc4f165e545debd40a3cd3b263107f9c7ecab8407f014ff159de20ac46c9e2eabd2c68aefd5151cbb0f92262223103b8c2ad0a3156253520ef911314877b WHIRLPOOL 9e8c8458f4e7054978ae83330118cc31320eef9bd5a0fd3f35b61c39ee629e5dd1c10b49690259c0789a130e916f9620baa7d7331ac7ff42c4fb7196dfb2426c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQIcBAEBCAAGBQJRslU+AAoJEEMpAov1cw9lPWkP/iE557r2G68hVHT+gfGPVAen
+BYoGZEJzC0ycxV2f4n9rCTKHz0lm3oer7Xq64xlcj5xZQl9dC5mHpbCmnFUOHDYk
+26w+6tAIg2H0lhUb8pljd9k+mrl9Bpojx2Ha+Z2idPHHHSceWMp6FuPrpxPa+Kfe
+eRYUgncc/SVOb7MAGV0Z11rp9nLlRtzMdzSeUZxNN6ojTFcmzqdYVFpOh1z+qG4w
+7454rMsilzLQvMXHgIp5gfDl6sWRkdsZiFWKfcyERFy8IZy9zZ8o10gGfToKBm4f
+AomAjH5fKo4L6zt9BJyROiJ+v08zST5VqgZLQDyFz4fu+DywiNzi/a6P4h5U4x1w
+X1ndT/IZE9mCgLi1Jgs74zBZxKH0HEuV375ZUzxUiKnqpc0BHowYvbrQEMzmxqfj
+OtqNyl2gItd5ojvlWg86Q35JQiBSj5JhERsy4YleZSI3waGQ7IcqYdNCanRF/Grh
+nwpzRVhOYzoheFV/X6bGhPAAjb1vAiKCCrvW4kVsDbTyIf/tJaFtU7Pra4pvgYxg
+ruzLhHR5saJZJVZX8d/jdFONmmXQzq2+MrUeGjLo79UD6FtcOeD8KOUacndJ3nhZ
+P/Vb4WxTKbDArHKUfYzkbZFuoDYP4YppJiI266aUgA5P1rxMLyyzwgy6s4VRb2p0
+gnDt28cIhT41ZX6LrTQ3
+=v/KF
+-----END PGP SIGNATURE-----
