@@ -1,6 +1,13 @@
 # ChangeLog for games-fps/quakespasm
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*quakespasm-0.85.9 (07 Jun 2013)
+
+  07 Jun 2013; Piotr Szymaniak <szarpaj@grubelek.pl>
+  +files/0.85.9-makefile.patch, +quakespasm-0.85.9.ebuild,
+  -files/0.85.7-makefile.patch, -quakespasm-0.85.7.ebuild:
+  games-fps/quakespasm: Version bump.
 
 *quakespasm-0.85.7 (18 Apr 2012)
 
@@ -48,4 +55,3 @@
   +files/quakespasm-0.85.1-save-in-userdir.patch:
   New package. Hardmasked for testing, still has some problems with per user
   settings/savegames/etc.
-
